welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:47: error: reassignment to val
		if (x=1 or x=3){
                     ^FlowerCase:49: error: not found: value fleur
			fleur(Color.blue)
                        ^